WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129026
isEditablePosition shouldn't trigger synchronous layout
https://bugs.webkit.org/show_bug.cgi?id=129026
Summary
isEditablePosition shouldn't trigger synchronous layout
Ryosuke Niwa
Reported
2014-02-18 22:16:55 PST
isEditablePosition currently triggers synchronous layout but it shouldn't.
Attachments
Fixes the bug
(1.49 KB, patch)
2014-02-18 22:19 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2014-02-18 22:19:58 PST
Created
attachment 224594
[details]
Fixes the bug
Brent Fulgham
Comment 2
2014-02-19 11:02:52 PST
Comment on
attachment 224594
[details]
Fixes the bug r=me
Ryosuke Niwa
Comment 3
2014-02-19 13:51:06 PST
Comment on
attachment 224594
[details]
Fixes the bug Clearing flags on attachment: 224594 Committed
r164387
: <
http://trac.webkit.org/changeset/164387
>
Ryosuke Niwa
Comment 4
2014-02-19 13:51:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug