isEditablePosition shouldn't trigger synchronous layout https://bugs.webkit.org/show_bug.cgi?id=129026

Reviewed by Brent Fulgham.

Just trigger style recalc instead.

* editing/htmlediting.cpp:
(WebCore::isEditablePosition):


Canonical link: https://commits.webkit.org/147096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164387 268f45cc-cd09-0410-ab3c-d52691b4dbfc